@@ -36,40 +36,11 @@ AC_DEFUN([X_AC_MRNET], [
       pkt.get_array(&type, &bufLength);
     }])],
     [AC_DEFINE([MRNET40], [], [MRNet 4.0])
-      AC_DEFINE([MRNET31], [], [MRNet 3.1])
-      AC_DEFINE([MRNET3], [], [MRNet 3.X]) 
       mrnet_vers=4.0
     ]
   )
   if test $mrnet_vers = -1; then
-    AC_COMPILE_IFELSE([AC_LANG_SOURCE([#include "mrnet/MRNet.h"
-      using namespace MRN;
-      using namespace std;
-      int main()
-      {
-        Network *net;
-        vector<const char *> f;
-        vector<int> fid;
-        net->load_FilterFuncs(NULL, f, fid);
-      }])],
-      [AC_DEFINE([MRNET31], [], [MRNet 3.1])
-        AC_DEFINE([MRNET3], [], [MRNet 3.X]) 
-        mrnet_vers=3.1
-      ]
-    )
-  fi
-  if test $mrnet_vers = -1; then
-    AC_COMPILE_IFELSE([AC_LANG_SOURCE([#include "mrnet/MRNet.h"
-      using namespace MRN;
-      int main()
-      {
-        Network *net;
-        net->register_EventCallback(Event::TOPOLOGY_EVENT, TopologyEvent::TOPOL_ADD_BE, NULL, NULL);
-      }])],
-      [AC_DEFINE([MRNET3], [], [MRNet 3.X])
-        mrnet_vers=3.X
-      ]
-    )
+    AC_MSG_ERROR([STAT requires MRNet 4.0 or greater. Specify MRNet prefix with --with-mrnet])
   fi
   AC_MSG_RESULT([$mrnet_vers])
   AC_MSG_CHECKING(for libmrnet)
