@@ -1,3 +1,7 @@
+2018-01-16 Gregory L. Lee <lee218@llnl.gov>
+	* : Require Graphlib 3.0 or greater
+	* : Require MRNet 4.0 or greater
+
 2018-01-09 Gregory L. Lee <lee218@llnl.gov>
 	* : added license info to new .py files
 
